# learn_type_hints_pydantic

./: README.md  pyproject.toml
test/: test_annotated_type_.py  test_pydantic_models.py  test_pydantic_validate.py
